--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -228,7 +228,9 @@ hr.small {
 .post-preview > a:hover,
 .post-preview > a:focus {
   text-decoration: none;
-  color: #0085A1;
+/*   color: #0085A1; */
+  color: orange;
+  
 }
 .post-preview > a > .post-title {
   font-size: 30px;
